recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: not found: value a
  a=steps
  ^Spiral:3: error: not found: value c
  c=length
  ^Spiral:4: error: not found: value a
  while(a>=0) {
        ^Spiral:5: error: not found: value c
    avance(c)
           ^Spiral:7: error: not found: value a
    a=a-1
    ^Spiral:8: error: not found: value c
    c=c+increment
    ^