recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  a=steps
  c=length
  while(a>=0) {
    avance(c)
    gauche(angle)
    a=a-1
    c=c+increment
  }
}